# point-slice

./: .gitignore  README.md  create_dxf.py  create_dxf_gui.py  lint.py  point_slice_studio_cli.py  point_slice_studio_gui.py  pyinstaller.spec  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py
.github/workflows/: ci.yml  release.yml  test.yml
src/: dxf_document.py  dxf_handler.py  parse_file.py  point_slice_studio.py  point_slice_studio_v7.py  points_slice.py
src/ps_core/: __init__.py  dxf_document.py  parse_file.py  points_slice.py  workflow.py
tests/: test_dxf_document.py  test_dxf_handler.py  test_parse_file.py
tests/testdata/02_csv/: 01_-1f_L.csv  02_-1f_M.csv  03_-1f_H.csv  04_2f_L.csv  05_2f_M.csv  06_2f_H.csv  07_TYY.csv  08_TXX_1.csv  09_TYY_2.csv  10_TYY_3.csv
