[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "point-slice"
version = "0.1.0"
description = "Convert CSV point cloud data to DXF format"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
dependencies = [
    "ezdxf>=1.4.2",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pyinstaller>=5.13.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]
